# atlas

./: .gitignore  README.md
db/: schema.sql
docs/: ARCHITECTURE.md  PRD.md
engine/: README.md  pyproject.toml
engine/atlas_engine/: __init__.py  active.py  claude_extractor.py  cli.py  evals.py  extract.py  fixtures.py  graph.py  learner.py  modality.py  pipeline.py  schemas.py  verify.py
engine/tests/: test_active.py  test_graph.py  test_learner.py  test_modality.py  test_pipeline.py  test_schemas.py  test_verify.py
